--- a/css/index.css
+++ b/css/index.css
@@ -71,15 +71,14 @@ button {
 /*-----------------HEADER-----------------------*/
 
 .header {
+  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+  background: var(--WHITE, #fff);
   padding-top: 24px;
   padding-bottom: 24px;
-  margin-left: 156px;
-  margin-right: 156px;
 }
 
 .header-container {
   display: flex;
-  margin-left: 0 auto;
 }
 
 .header-navigation {
@@ -96,6 +95,7 @@ button {
   text-transform: uppercase;
   margin-right: 76px;
 }
+
 .header-navigation-logo:hover,
 .header-navigation-logo:focus {
   color: #404bbf;
@@ -114,7 +114,6 @@ button {
 .header-menu-list {
   display: flex;
   gap: 40px;
-  margin-right: 76px;
 }
 
 .header-address {
@@ -132,7 +131,7 @@ button {
 .header-address-list {
   display: flex;
   gap: 40px;
-  margin-left: 0 auto;
+  margin-left: 332px;
 }
 
 .header-menu-link:hover,
@@ -160,6 +159,9 @@ button {
 
 .hero-container {
   background-color: var(--NAVY-BLUE, #2e2f42);
+  width: 1440px;
+  height: 600px;
+  flex-shrink: 0;
 }
 
 .hero-title {
@@ -169,6 +171,9 @@ button {
   line-height: 1.07;
   letter-spacing: 0.02em;
   margin-bottom: 48px;
+  margin-left: 472px;
+  margin-right: 472px;
+  padding-top: 188px;
 }
 
 .hero-button-os {
@@ -180,6 +185,12 @@ button {
   cursor: pointer;
   background-color: #4d5ae5;
   font-family: "Roboto", sans-serif;
+  padding: 16px 32px 16px 32px;
+  border-radius: 4px;
+  background: var(--IRIS, #4d5ae5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  display: inline-flex;
+  align-items: flex-start;
 }
 
 .hero-button-os:focus,
@@ -194,9 +205,15 @@ button {
 .values-list {
   padding-top: 120px;
   padding-bottom: 120px;
+  display: flex;
+  gap: 24px;
 }
 
-.values-item-title {
+.values-list-item {
+  width: calc((100% - 24px * 3) / 4);
+}
+
+. .values-item-title {
   color: var(--NAVY-BLUE, #2e2f42);
   font-size: 20px;
   font-weight: 500;
@@ -218,7 +235,24 @@ button {
 .team {
   background: var(--CLOUD, #f4f4fd);
   padding-top: 120px;
-  padding-bottom: 572px;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-list-item {
+  border-radius: 0px 0px 4px 4px;
+  background: var(--WHITE, #fff);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  margin-bottom: 120px;
+}
+
+.team-list-img {
+  margin-bottom: 32px;
 }
 
 .team-title {
@@ -239,6 +273,7 @@ button {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  padding-bottom: 3px;
 }
 .team-list-text {
   color: var(--SLATE, #434455);
@@ -246,6 +281,7 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 32px;
 }
 
 /*----------------------------------------*/
@@ -260,6 +296,15 @@ button {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-top: 120px;
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  gap: 48px 24px;
+  margin-bottom: 120px;
+  flex-wrap: wrap;
 }
 
 .portfolio-list-item {
@@ -267,6 +312,7 @@ button {
   background: var(--WHITE, #fff);
 }
 .portfolio-list-img {
+  margin-bottom: 32px;
   background: url(<path-to-image>),
     lightgray -25.026px 0px / 125% 100% no-repeat;
 }
@@ -276,13 +322,17 @@ button {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  padding-left: 16px;
+  margin-bottom: 8px;
 }
 .portfolio-list-iten-text {
+  margin-bottom: 32px;
   color: var(--SLATE, #434455);
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding-left: 16px;
 }
 
 /*----------------------------------------*/
@@ -291,6 +341,8 @@ button {
 
 .footer {
   background: var(--NAVY-BLUE, #2e2f42);
+  padding-top: 101.5px;
+  padding-bottom: 100px;
 }
 
 .footer-logo {
@@ -319,4 +371,5 @@ button {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-top: 17.5px;
 }
